fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
 div {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+div * {
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
